--- a/inf.html
+++ b/inf.html
@@ -5,7 +5,7 @@
 <div class="contenedor">
 <center>
 <img src="b1.jpeg" width="424" height="424"></img>
-<img src="https://github.com/Juliang24/Eliestructuras/blob/0025dab1ff7f5eba7a35aae37685beee8dd2e0c5/b20.jpeg" width="424" height="424"></img>
+<img src="https://github.com/Juliang24/Eliestructuras/blob/main/b20.jpeg?raw=true" width="424" height="424"></img>
 <img src="b3.jpeg" width="424" height="424"></img>
 </center>
 </div>
