--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Eli.Estructuras.com.ar</title></head><link rel="shorcut icon"  type "image/x-icon" href="D:\Diseño Web\Eli estructuras\logo.jpeg">
+<head><title>Eli.Estructuras.com.ar</title><link rel="shorcut icon"  type "image/x-icon" href="D:\Diseño Web\Eli estructuras\logo.jpeg"></head>
 <body>
 <link rel="stylesheet"  type "text/css" href="index.css">
 <center><h1><img src="logo.png" width="400" height="400"></img></h1></center>
