--- a/inf.html
+++ b/inf.html
@@ -42,7 +42,7 @@
 </center>
 </div>
 <br>
-<u><center><h2><a href="index.html">Volver al menu Principal</a></h2></center></u>
+<center><h2><a href="index.html">Volver al menu Principal</a></h2></center>
 </body>
 </center>
 </html>
