--- a/op.html
+++ b/op.html
@@ -8,6 +8,6 @@
 <ul><li>🌷Fondo sólo a $22.000</li></ul>
 <ul><li>🌷Estructuras sólas a $22.000</li></ul>
 <br>
-<u><center><h2><a href="index.html">Volver al menu Principal</a></h2></center></u>
+<center><h2><a href="index.html">Volver al menu Principal</a></h2></center>
 </body>
 </html>
