--- a/pre.html
+++ b/pre.html
@@ -16,6 +16,6 @@
 <h5>TEMATICA INFANTIL: TOTAL DE $45.000</h5>
 <h5>TEMATICA 15, 50, 18, XV, ONE O HAMACA: TOTAL DE $57.000</h5>
 <br>
-<u><center><h2><a href="index.html">Volver al menu Principal</a></h2></center></u>
+<center><h2><a href="index.html">Volver al menu Principal</a></h2></center>
 </body>
 </html>
