--- a/15.html
+++ b/15.html
@@ -26,7 +26,7 @@
 </center>
 </div>
 <br>
-<u><center><h2><a href="index.html">Volver al menu Principal</a></h2></center></u>
+<center><h2><a href="index.html">Volver al menu Principal</a></h2></center>
 </body>
 </center>
 </html>
