--- a/ad.html
+++ b/ad.html
@@ -8,6 +8,6 @@
 <ul><li>🌷Sillón trono $10.000(Si lo sumas a la ambientación completa) o $15.000 si lo alqulilas sólo.</li></ul>
 <ul><li>🌷juego de 10 puff con una mesa a $10.000</li></ul>
 <br>
-<u><center><h2><a href="index.html">Volver al menu Principal</a></h2></center></u>
+<center><h2><a href="index.html">Volver al menu Principal</a></h2></center>
 </body>
 </html>
